<resources>
    <string name="app_name">hrx-mobility</string>
    <string name="company_name">Unionbank of the Philippines</string>
    <string name="nav_apply">Apply for leave</string>
    <string name="nav_vacancy">Apply for internal vacancy</string>
    <string name="nav_schedule">Change Working Schedule</string>
    <string name="nav_timekeeping">Time Keeping</string>
    <string name="finance_header">My Finances</string>
    <string name="finance_subheader">List of all your financial transactions in one place</string>
    <string name="finance_avail_product">You can also avail our Unionbank products</string>
    <string name="finance_app_reimbursement">Apply for Reimbursement</string>
    <string name="finance_view_payslip">View Pay Slip</string>
    <string name="finance_micro_pension">Micro Pension</string>
    <string name="finance_credit_card">Apply for Credit Card</string>
    <string name="finance_loans">Apply for Loans</string>
    <string name="goal_header">My Goals</string>
    <string name="goal_subheader">List of all your team\'s goal in one place</string>
    <string name="learning_header">My Learning</string>
    <string name="learning_subheader">List of all your access to knowledge</string>
    <string name="approval_header">My Approvals</string>
    <string name="approval_subheader">List of all your approval in one place</string>
    <string name="greeting_home">What do you wanna do today?</string>
    <string name="greeting_news">Here are the news today.</string>
    <string name="title_home">Home</string>
    <string name="title_finance">Finance</string>
    <string name="title_goal">Goal</string>
    <string name="title_learning">Learning</string>
    <string name="title_more">More</string>
    <string name="title_approval">Approval</string>
    <string name="line_more_manager">Manage your employees through these links</string>
    <string name="faq_header">FAQs</string>
    <string name="faq_subheader">List of frequently as questions</string>
    <string name="hint_employee_number">Enter employee username</string>
    <string name="hint_employee_password">Enter employee password</string>
    <string name="form_login">Login</string>
    <string name="form_username">Username</string>
    <string name="form_password">Password</string>
    <string name="form_submit">Submit</string>
    <string name="form_acknowledge">I Acknowledge</string>
    <string name="form_affirm">I Affirm</string>
    <string name="form_continue">Continue</string>
    <string name="form_save">Save</string>
    <string name="form_cancel">Cancel</string>
    <string name="form_back">Back</string>
    <string name="form_edit">Edit</string>
    <string name="form_delete">Delete</string>
    <string name="form_add">Add</string>
    <string name="form_review">Review</string>
    <string name="form_upload">upload</string>
    <string name="form_add_custom">Add Custom</string>
    <string name="form_no_upload">No files uploaded yet.</string>
    <string name="form_view_more">View More</string>
    <string name="form_view_okay">Okay</string>
    <string name="form_having_trouble">Having trouble signing in?</string>
    <string name="form_summary_message">Please review the information you have selected before submitting the
        transaction.
    </string>
    <string name="form_summary_review">Please review all the information that you\'ve provide</string>
    <string name="certificate_of_employment_form_header">Certificate of Employment Form</string>
    <string name="certificate_of_employment_sub_header">Please fill up.</string>
    <string name="certificate_of_employment_form_purpose">Purpose</string>
    <string name="certificate_of_employment_form_country">Country</string>
    <string name="goals_priority_title">Goal Priority</string>
    <string name="goals_priority_message">Please select the level of priority.</string>
    <string name="dialog_coe_type_title">Type of Certificate</string>
    <string name="dialog_coe_type_message">Please select your certificate type.</string>
    <string name="dialog_coe_purpose_title">Purpose</string>
    <string name="dialog_coe_purpose_message">Select the purpose of your certificate of employment.</string>
    <string name="dialog_coe_countries_title">Countries</string>
    <string name="dialog_coe_countries_message">Select the country you\'ve been on your last employment.</string>
    <string name="form_from_date">From Date</string>
    <string name="form_to_date">To Date</string>
    <string name="form_reason">Reason</string>
    <string name="form_remarks">Remarks</string>
    <string name="form_approved_leaves">Approved Leaves</string>
    <string name="loading">Loading…</string>
    <string name="title_error_generic">Error</string>
    <string name="error_generic_title">Error</string>
    <string name="error_generic">It seems we encountered a problem capturing your response. Please try again.</string>
    <string name="error_network">Please check your internet connection</string>
    <string name="error_invalid_month">The selected month on "To Date" must be less than or equal to the current date.
    </string>
    <string name="error_month_not_selected">Please select a month for "To Date".</string>
    <string name="error_last_attachment">You cannot remove all attachments</string>
    <string name="error_image_chooser">There\'s a problem with the image.</string>
    <string name="error_image_upload_permission">It seems that you didn\'nt allow permission to the 1UHub to access your
        file storage. Please enable it by going to your Settings > Permissions > and tick on Storage.
    </string>
    <string name="error_total_delivery_miscarriage">Total of delivery and miscarriage cannot exceed number of
        pregnancy.
    </string>
    <string name="error_no_image">No selected image.</string>
    <string name="error_form_procedure_empty">Please select atleast 1 procedure.</string>
    <string name="error_form_offset_empty">Please select atleast 1 loan to offset.</string>
    <string name="error_no_webview_content">No Webview content</string>
    <string name="error_reload">Problem encountered, try to reload again.</string>
    <string name="error_otp">Incorrect OTP.</string>
    <string name="error_converting_attachments">Please reattach the documents.</string>
    <string name="error_null_image">Image cannot found, please reattach the image.</string>
    <string name="error_large_attachment">Your attachments seems too big, resizing your attachments…</string>
    <string name="error_submit_form">Failed submitting form</string>
    <string name="error_session_expired_title">Session Expired</string>
    <string name="error_session_expired_msg">Your session has been expired, please login again.</string>
    <string name="error_faq_loading">There\'s problem encountered loading FAQs. Please try again later.</string>
    <string name="error_profile_loading">Error loading profile, please try to reload again.</string>
    <string name="error_date">Cannot get date</string>
    <string name="error_transaction_detail_title">Invalid Transaction</string>
    <string name="error_transaction_detail_message">Please reload the transaction list and try again.</string>
    <string name="error_invalid_faq_id">Invalid FAQ, please reload the list.</string>
    <string name="error_loading_faq_detail">There\'s a problem loading the FAQ. Please try again.</string>
    <string name="error_feedback">Sorry, we can\'t submit your feedback, please try again later.</string>
    <string name="error_feedback_category">Sorry, there\'s a problem fetching feedback categories. Please try again
        later.
    </string>
    <string name="error_no_feedback_category_title">Feedback Category</string>
    <string name="error_no_feedback_category_message">Please choose what category your feedback will be.</string>
    <string name="error_no_feedback_title">Empty Feedback</string>
    <string name="error_no_feedback_message">Feedback cannot be empty.</string>
    <string name="error_no_training_title">Empty Remarks</string>
    <string name="error_no_training_message">Remarks must not be empty.</string>
    <string name="error_account_number_title">Invalid Account Number</string>
    <string name="error_invalid_account_number_message">Please input a valid account number.</string>
    <string name="error_releasing_center_title">Invalid Releasing Center</string>
    <string name="error_invalid_releasing_center_message">Please select releasing center.</string>
    <string name="error_account_number_length">Account number must be 12 digit.</string>
    <string name="error_no_account_number">Please input a valid account number first.</string>
    <string name="error_not_valid_mpl">You\'re not valid to avail multi-flightPurpose loan.</string>
    <string name="error_validate_mpl">There\'s a problem validating your multi-flightPurpose loan request.</string>
    <string name="error_load_purpose">Failed to load flightPurpose of availments. Please try again.</string>
    <string name="error_validate_account_number">There\'s a problem validating account number. Please try again.
    </string>
    <string name="error_mpl_attachments">Error fetching attachments. Please try again.</string>
    <string name="error_resend_otp">There\'s a problem resending OTP.</string>
    <string name="error_amount">Invalid Amount</string>
    <string name="error_amount_limit_message">This exceeds the benefit limit of %s. Please input another amount.
    </string>
    <string name="error_empty_amount">You can\'t leave it 0 or blank.</string>
    <string name="error_send_feedback">It seems that we\'ve encountered problem upon submitting your feedback. Please
        try again later.
    </string>
    <string name="error_dependents">Sorry, it seems that we\'ve encountered a problem parsing your dependents.</string>
    <string name="error_premium_payments">Sorry, it seems that we\'ve encountered a problem parsing your payments.
    </string>
    <string name="error_branches">Sorry, it seems that we\'ve encountered a problem parsing branches.</string>
    <string name="error_procedures">Sorry, it seems that we\'ve encountered a problem parsing procedures.</string>
    <string name="error_agreement">Sorry, it seems that we\'ve encountered a problem upon agreements.</string>
    <string name="error_rooted_device">Sorry, you cannot use this app on rooted devices.</string>
    <string name="error_change_auth">It seems that we\'ve encountered a problem switching authentication.</string>
    <string name="error_init_biometrics">Sorry, it seems there\'s a problem setting up your biometrics. Try again
        later.
    </string>
    <string name="error_grants">Sorry, it seems there\'s a problem parsing grant items.</string>
    <string name="error_colleges">It seems that we\'ve encountered a problem parsing schools.</string>
    <string name="error_rating">Sorry, please try rating the book again.</string>
    <string name="error_loading_podcast">Sorry, it seems that there\'s a problem loading the podcast.</string>
    <string name="error_podcast_review_message">We\'ve encountered a problem submitting your feedback.</string>
    <string name="error_permission_storage">It seems that you haven\'t give permission to access your storage.</string>
    <string name="time_your_on_time">You\'re on time!</string>
    <string name="time_your_on_time_description">You checked in on time today! Good job, have a productive day ahead!
    </string>
    <string name="reg_tab_pending">Pending</string>
    <string name="reg_tab_history">History</string>
    <string name="reg_header">Regularization</string>
    <string name="reg_sub_header">Initiate regularization to a worthy employee</string>
    <string name="approval_leave">Leave</string>
    <string name="approval_dtr">DTR</string>
    <string name="approvalAll">All</string>
    <string name="approvalExpense">Expense</string>
</resources>