<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="@dimen/xxl_padding"
>

    <com.itsgmobility.hrbenefits.ui.UBButton
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/tangerineOrange"
            android:text="@string/form_edit"
            android:layout_marginBottom="@dimen/xs_padding"
    />

    <com.itsgmobility.hrbenefits.ui.UBButton
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_delete"
            android:textColor="@color/tangerineOrange"
            android:layout_marginBottom="@dimen/xl_padding"
    />

    <com.itsgmobility.hrbenefits.ui.UBButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_cancel"
            android:textColor="@color/tangerineOrangeDark"
            android:layout_marginBottom="@dimen/m_padding"
    />

</LinearLayout>