<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:id="@+id/toolbar"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/m_padding"
              android:paddingRight="@dimen/m_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.itsgmobility.hrbenefits.ui.UBEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:drawableEnd="@drawable/ic_search_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/UBEditText"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:focusable="false"
                android:editable="false"
                app:layout_constraintTop_toTopOf="parent"/>

        <com.itsgmobility.hrbenefits.ui.UBButton
                android:id="@+id/btn_pending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:onClick="onClick"
                android:text="@string/reg_tab_pending"
                android:textSize="@dimen/text_extra_small"
                style="?ubButtonLeftPrimaryStyle"
                app:layout_constraintEnd_toStartOf="@+id/btn_history"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UBEditText"/>

        <com.itsgmobility.hrbenefits.ui.UBButton
                android:id="@+id/btn_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/reg_tab_history"
                android:textSize="@dimen/text_extra_small"
                style="?ubButtonRightStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/btn_pending"
                app:layout_constraintTop_toTopOf="@+id/btn_pending"/>

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/s_padding"
                android:padding="@dimen/s_padding"
                app:layout_constraintTop_toBottomOf="@+id/btn_history"
                app:layout_constraintStart_toStartOf="parent" android:id="@+id/linearLayoutCompat4">

            <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="50dp"
                    android:text="@string/approvalAll"
                    android:layout_height="30dp"
                    android:textSize="@dimen/text_small"
                    android:background="@drawable/approval_all_btn"
                    android:textColor="@color/white_color"
                    app:layout_constraintEnd_toStartOf="@+id/btn_history"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/UBEditText" android:id="@+id/all"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:background="@drawable/approval_leave_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textSize="@dimen/text_small"
                    android:id="@+id/leave"
                    android:text="@string/approval_leave"
                    android:textColor="@color/approval_leave"
                    android:layout_marginStart="@dimen/custom_dialog_icon_margin_bottom"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:background="@drawable/approval_dtr_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textSize="@dimen/text_small"
                    android:text="@string/approval_dtr"
                    android:textColor="@color/approval_worksched"
                    android:layout_marginStart="@dimen/custom_dialog_icon_margin_bottom"
                    android:id="@+id/btnTime"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:background="@drawable/approval_reimbursement_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textSize="@dimen/text_small"
                    android:text="@string/approvalExpense"
                    android:textColor="@color/approval_transfer"
                    android:layout_marginStart="@dimen/custom_dialog_icon_margin_bottom"
                    android:id="@+id/btn_reimbursement"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <FrameLayout
                android:id="@+id/frame_regular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat4"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>