<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:paddingTop="@dimen/l_padding"
                                                   android:paddingLeft="@dimen/m_padding"
                                                   android:paddingRight="@dimen/m_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_back"
            android:clickable="true"
            android:layout_width="8dp"
            android:layout_height="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hrx_back"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_separation_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_header"
            android:layout_marginLeft="@dimen/grid_2"
            android:textColor="@color/ub_black"
            android:textStyle="bold"
            android:textSize="@dimen/text_headline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ic_back"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_separation_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_1"
            android:text="@string/reg_sub_header"
            android:textStyle="bold"
            android:textColor="@color/ub_black"
            android:textSize="@dimen/text_small_body"
            app:layout_constraintTop_toBottomOf="@+id/tv_separation_header"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <com.itsgmobility.hrbenefits.ui.UBButton
            android:id="@+id/btn_pending"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/grid_3"
            android:onClick="onClick"
            android:text="@string/reg_tab_pending"
            android:textSize="@dimen/text_extra_small"
            style="?ubButtonLeftPrimaryStyle"
            app:layout_constraintEnd_toStartOf="@+id/btn_history"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_separation_subheader"/>

    <com.itsgmobility.hrbenefits.ui.UBButton
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="@dimen/grid_3"
            android:onClick="onClick"
            android:text="@string/reg_tab_history"
            android:textSize="@dimen/text_extra_small"
            style="?ubButtonRightStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/btn_pending"
            app:layout_constraintTop_toBottomOf="@+id/tv_separation_subheader"/>

    <FrameLayout
            android:id="@+id/frame_regular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_history"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>